# shader-i18n

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
shader_i18n/cli/: main.py
shader_i18n/errors/: shader_pack_file.py
shader_i18n/file_handler/: __init__.py
