[project]
name = "shader-i18n"
dynamic = ["version"]
description = "Add your description here"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "openai>=2.31.0",
    "typer>=0.24.1",
]

authors = [
    { name = "lidongxun967", email = "Debug967@outlook.com" },
]

[project.scripts]
shader-i18n = "shader_i18n.cli.main:app"

[project.urls]
Homepage = "https://github.com/lidongxun967/shader-i18n"
Repository = "https://github.com/lidongxun967/shader-i18n"
Issues = "https://github.com/lidongxun967/shader-i18n/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
